--- a/source/test/app/views/data.erb
+++ b/source/test/app/views/data.erb
@@ -1,9 +1,4 @@
-<html>
 
-<head>
-</head>
-
-<body>
 
 <h3>FRED Data Viewer</h3>
 <% data=JSON.parse(Datapoint.where(dataset_id: params[:id]).to_json) %>
@@ -16,6 +11,52 @@
 <p><%= entry['date'] + " - " + entry['value'] %></p>
 <% end %>
 
+<div id="container" style="width:100%; height:400px;"></div>
+Highcharts
 
-</body>
-</html>
+
+<script>
+$(function () {
+    $('#container').highcharts({
+            title: {
+                text: 'Your Graph',
+                x: -20 //center
+            },
+            subtitle: {
+                text: 'St. Louis Federal Reserve',
+                x: -20
+            },
+            xAxis: {
+                categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
+                    'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+            },
+            yAxis: {
+                title: {
+                    text: 'Value'
+                },
+                plotLines: [{
+                    value: 0,
+                    width: 1,
+                    color: '#808080'
+                }]
+            },
+            tooltip: {
+                valueSuffix: '%'
+            },
+            legend: {
+                layout: 'vertical',
+                align: 'right',
+                verticalAlign: 'middle',
+                borderWidth: 0
+            },
+            series: [{
+                name: 'Tokyo',
+                data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+            }, {
+                name: 'New York',
+                data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
+            }]
+        });
+    });
+
+</script>
