--- a/source/test/app/views/layout.erb
+++ b/source/test/app/views/layout.erb
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/normalize.css">
  <link rel="stylesheet" href="/css/application.css">
  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+ <script src="http://code.highcharts.com/highcharts.js"></script>
  <script type="text/javascript" src="/js/application.js"></script>
 
   <title></title>
