--- a/source/test/app/views/data.erb
+++ b/source/test/app/views/data.erb
@@ -5,15 +5,18 @@
 <p>Dataset ID: <%= params[:id] %></p>
 <p>Dataset Code: <%= Dataset.find(params[:id])['name'] %> </p>
 <p>Date - Value</p>
-<% data.each do |entry| %>
-<% entry=entry['datapoint'] %>
 
-<p><%= entry['date'] + " - " + entry['value'] %></p>
+<% dates_arr=[] %>
+<% values_arr=[] %>
+
+<% data.each do |entry| %>
+  <% entry=entry['datapoint'] %>
+  <% dates_arr << entry['date'] %>
+  <% values_arr << entry['value'].to_f %>
+ <!-- <p><%= entry['date'] + " - " + entry['value'] %></p> -->
 <% end %>
 
 <div id="container" style="width:100%; height:400px;"></div>
-Highcharts
-
 
 <script>
 $(function () {
@@ -27,8 +30,8 @@ $(function () {
                 x: -20
             },
             xAxis: {
-                categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
-                    'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+                categories: <%= dates_arr %>//[, 'Feb', 'Mar', 'Apr', 'May', 'Jun',
+                    //'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
             },
             yAxis: {
                 title: {
@@ -50,12 +53,12 @@ $(function () {
                 borderWidth: 0
             },
             series: [{
-                name: 'Tokyo',
-                data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
-            }, {
-                name: 'New York',
-                data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
-            }]
+                name: 'Value',
+                data: <%= values_arr %>//[7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+            }//, {
+             //   name: 'New York',
+             //   data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]}
+            ]
         });
     });
 
