added text to main view

--- a/source/test/app/views/index.erb
+++ b/source/test/app/views/index.erb
@@ -20,5 +20,8 @@
   <input type='submit' value='Submit'>
 </form>
 
+<p>This application was built using the <a href="http://api.stlouisfed.org/docs/fred/">FRED® API</a>, which allows users to access the FRED (Federal Reserve Economic Data) and ALFRED (Archival Federal Reserve Economic Data) databases hosted by the <a href="http://research.stlouisfed.org/">Economic Research Division</a> of the <a href="http://stlouisfed.org/">Federal Reserve Bank of St. Louis</a>.</p>
+
+
 </body>
 </html>
