--- a/source/test/app/views/layout.erb
+++ b/source/test/app/views/layout.erb
@@ -15,9 +15,9 @@
   <title></title>
 </head>
 <body>
-  <a href='/'>Home</a>
-  <hr>
-
+  <nav>
+    <a href='/'>Home</a>
+  </nav>
   <%= yield %>
 </body>
 </html>
