--- a/source/public/css/application.css
+++ b/source/public/css/application.css
@@ -31,13 +31,43 @@ th {
 	padding:5px;
  }
 
- nav a{
-  background-color: lightgrey;
-  margin: 10px;
-  padding: 10px;
-  border: 2px solid black;
- }
+.header       { background-color: #384047; }
+.logo a       { background-color: #5fcf80; }
+.nav a        { background-color: #3f8abf; }
 
- nav{
-  height: 80px;
- }
+.header {
+  min-height: 100px;
+  padding: 15px;
+}
+
+.logo {
+  float: left;
+  margin: 25px 25px 0 0;
+}
+
+.nav li {
+  margin-top: 15px;
+  margin-right: 10px;
+  margin-left: 10px;
+  list-style-type: none;
+  float: right;
+}
+
+.logo a,
+.nav a {
+  display: block;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  padding: 5px 15px;
+  border-radius: 5px;
+}
+
+.footer{
+  background-color: #384047;
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
+  height: 40px;
+  padding: 15px;
+}
