--- a/source/public/css/application.css
+++ b/source/public/css/application.css
@@ -1,6 +1,3 @@
-body{
-  /*background-image: url(http://files.shroomery.org/cms/ileaveonmyown.gif);*/
-}
 .container {
     margin: 20px auto;
     width: 600px;
@@ -70,4 +67,14 @@ th {
   bottom: 0px;
   height: 40px;
   padding: 15px;
+  color: white;
+}
+
+.footer p {
+  text-align: center;
+  background-color: #3f8abf;
+  max-width: 480px;
+  margin: 10px auto;
+  border-radius: 10px;
+  padding: 5px;
 }
