--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,7 @@
       <h1 class="logo"><a href="/">FRED® Data Viewer</a></h1>
       <ul class="nav">
         <li><a href="/">Home</a></li>
-        <li><a href="#">Link 2</a></li>
+        <li><a href="/releases">Releases</a></li>
         <li><a href="#">Link 3</a></li>
         <li><a href="#">Link 4</a></li>
       </ul>
