added ability to view graph for a series in a release, also added media query

--- a/app/views/releases.erb
+++ b/app/views/releases.erb
@@ -18,7 +18,7 @@
   Realtime End:<%= realtime_end = entry['realtime_end'] %><br>
   Link: <%= link = entry['link'] %><br>
 
-  <form id='select_series' method='get' action='/releases/series/<%=id%>'>
+  <form id='select_series' method='get' action='/releases/<%=id%>/series'>
     <input type='submit' value='View all series'>
   </form>
 
