--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header group">
       <h1 class="logo"><a href="/">FRED® Data Viewer</a></h1>
       <ul class="nav">
         <li><a href="/">Home</a></li>
