--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,39 +1,8 @@
-.container {
-    margin: 20px auto;
-    width: 600px;
-    padding: 0px 20px 20px 20px;
-    border: 1px dotted black;
-    text-align: center;
-}
-th {
-    text-align: left;
-}
-
-#color_me li{
- 	display:block;
- 	width:30%;
- 	float:left;
- 	height:200px;
- 	border:solid black 2px;
- 	margin:2px;
-}
-
-#get_color{
-	border-radius: 10px;
-	border: red solid 2px;
-	background: red;
-	color:white;
-	margin:10px auto;
-	display:inline-block;
-	padding:5px;
- }
-
 .header       { background-color: #384047; }
 .logo a       { background-color: #5fcf80; }
 .nav a        { background-color: #3f8abf; }
 
 .header {
-  min-height: 100px;
   padding: 15px;
 }
 
@@ -43,7 +12,7 @@ th {
 }
 
 .nav li {
-  margin-top: 15px;
+  margin-top: 10px;
   margin-right: 10px;
   margin-left: 10px;
   list-style-type: none;
@@ -87,4 +56,26 @@ th {
 .intro{
   margin: 10px;
   padding: 10px;
+}
+
+/* CLEARFIX */
+
+.group::after {
+  content: " ";
+  display: table;
+  clear: both;
+}
+
+@media (max-width: 768px){
+  .nav li,
+  .logo{
+    width: initial;
+    height: initial;
+    float: initial;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .nav li{
+    padding-right: 40px;
+  }
 }
