--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,9 +6,9 @@
 
 <body>
 
-<h3>FRED® Data Viewer</h3>
+<h3>Welcome to the FRED® Data Viewer!</h3>
 
-<p>Choose your dataset:</p>
+<p>Please choose a dataset from the dropdown menu below, or browse through the database using the navigation links at the top of the page.</p>
 
 <form id='select_data' method='post' action='/'>
   <select name='dataset_code'>
@@ -16,6 +16,7 @@
     <option value='DGS10'>10-Year Treasury Constant Maturity Rate</option>
     <option value='CPIAUCSL'>Consumer Price Index for All Urban Consumers: All Items</option>
     <option value='GDPC1'>Real Gross Domestic Product</option>
+    <option value='U6RATENSA'>Total unemployed, plus all marginally attached workers plus total employed part time for economic reasons</option>
   </select>
   <input type='submit' value='Submit'>
 </form>
