--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,12 +21,13 @@
       <ul class="nav">
         <li><a href="/">Home</a></li>
         <li><a href="/releases">Releases</a></li>
-        <li><a href="#">Link 3</a></li>
+        <li><a href="/sources">Sources</a></li>
         <li><a href="#">Link 4</a></li>
       </ul>
     </header>
-
-  <%= yield %>
+  <div class='main-container'>
+    <%= yield %>
+  </div>
   <footer class="footer">
   </footer>
 </body>
