--- a/app/views/series.erb
+++ b/app/views/series.erb
@@ -8,7 +8,7 @@
 
 <p class='intro'>All series for release ID: <%= params[:id] %></p>
 <% id = params[:id] %>
-<% series = HTTParty.get("http://api.stlouisfed.org/fred/release/series?release_id=#{id}&api_key=foobar") %>
+<% series = HTTParty.get("http://api.stlouisfed.org/fred/release/series?release_id=#{id}&api_key=#{ENV["API_KEY"]}") %>
 <% series=series['seriess']['series'] %>
 <% series.each do |entry| %>
 <div class='entry'>
