--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,14 +4,14 @@
 
 </head>
 
-<body>
+<body class='main-body'>
 
 <h3>Welcome to the FRED® Data Viewer!</h3>
 
 <p>Please choose a dataset from the dropdown menu below, or browse through the database using the navigation links at the top of the page.</p>
 
 <form id='select_data' method='post' action='/'>
-  <select name='dataset_code'>
+  <select name='dataset_code' class="dropdown">
     <option value='UNRATE'>Civilian Unemployment Rate</option>
     <option value='DGS10'>10-Year Treasury Constant Maturity Rate</option>
     <option value='CPIAUCSL'>Consumer Price Index for All Urban Consumers: All Items</option>
