--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,16 +19,18 @@
   <header class="header group">
       <h1 class="logo"><a href="/">FRED® Data Viewer</a></h1>
       <ul class="nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/releases">Releases</a></li>
+        <li><a href="/login">Log In</a></li>
         <li><a href="/sources">Sources</a></li>
-        <li><a href="#">Link 4</a></li>
+        <li><a href="/releases">Releases</a></li>
+        <li><a href="#">#####</a></li>
+
       </ul>
     </header>
   <div class='main-container'>
     <%= yield %>
   </div>
   <footer class="footer">
+    <p>Built using the <a href="http://api.stlouisfed.org/docs/fred/">FRED® API</a>, which allows users to access the FRED (Federal Reserve Economic Data) and ALFRED (Archival Federal Reserve Economic Data) databases hosted by the <a href="http://research.stlouisfed.org/">Economic Research Division</a> of the <a href="http://stlouisfed.org/">Federal Reserve Bank of St. Louis</a>.</p>
   </footer>
 </body>
 </html>
