--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,7 @@
   <header class="header group">
       <h1 class="logo"><a href="/">FRED® Data Viewer</a></h1>
       <ul class="nav">
-        <li><a href="/login">Log In</a></li>
+        <li><a href="/sessions/new">Log In</a></li>
         <li><a href="/sources">Sources</a></li>
         <li><a href="/releases">Releases</a></li>
         <li><a href="#">#####</a></li>
