--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,25 +5,15 @@
 </head>
 
 <body class='main-body'>
-<% if current_user %>Hi, <%=current_user.name%> <% end %>
 <h3>Welcome to the FRED® Data Viewer!</h3>
+<% if current_user %><h3>Hi, <%=current_user.name%>!</h3>
 
-<p>Please choose a dataset from the dropdown menu below, or browse through the database using the navigation links at the top of the page.</p>
+<a href="/user_datasets">View Your Datasets</a>
+<% end %>
 
-<div>
-  <form id='select_data' method='post' action='/'>
-    <select name='dataset_code' class="dropdown">
-      <option value='UNRATE'>Civilian Unemployment Rate</option>
-      <option value='DGS10'>10-Year Treasury Constant Maturity Rate</option>
-      <option value='CPIAUCSL'>Consumer Price Index for All Urban Consumers: All Items</option>
-      <option value='GDPC1'>Real Gross Domestic Product</option>
-      <option value='U6RATENSA'>Total unemployed, plus all marginally attached workers plus total employed part time for economic reasons</option>
-    </select>
-    <input type='submit' value='Submit'>
-  </form>
-</div>
-<hr>
-<div>
+
+<p>This tool allows users to view graphs for popular datasets, as well as find up to date information on the sources of information available through FRED.</p>
+ <% unless current_user %>
     <h3>Sign Up</h3>
 
   <form id="sign-up" method="post" action="/sign_up">
@@ -41,15 +31,23 @@
 
     <div class="submit"><input type="submit" value="Sign Up"></div>
   </form>
+  <% end %>
 
+
+<p>Please choose a dataset from the dropdown menu below, or browse through the database using the navigation links at the top of the page.</p>
+
+<div>
+  <form id='select_data' method='post' action='/'>
+    <select name='dataset_code' class="dropdown">
+      <option value='UNRATE'>Civilian Unemployment Rate</option>
+      <option value='DGS10'>10-Year Treasury Constant Maturity Rate</option>
+      <option value='CPIAUCSL'>Consumer Price Index for All Urban Consumers: All Items</option>
+      <option value='GDPC1'>Real Gross Domestic Product</option>
+      <option value='U6RATENSA'>Total unemployed, plus all marginally attached workers plus total employed part time for economic reasons</option>
+    </select>
+    <input type='submit' value='Submit'>
+  </form>
 </div>
-
-
-
-
-<p>This application was built using the <a href="http://api.stlouisfed.org/docs/fred/">FRED® API</a>, which allows users to access the FRED (Federal Reserve Economic Data) and ALFRED (Archival Federal Reserve Economic Data) databases hosted by the <a href="http://research.stlouisfed.org/">Economic Research Division</a> of the <a href="http://stlouisfed.org/">Federal Reserve Bank of St. Louis</a>.</p>
-
-<p>This tool allows users to view graphs for popular datasets, as well as find up to date information on the sources of information available through FRED.</p>
 
 </body>
 </html>
