deleted extraneous lines

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -13,6 +13,7 @@
 
 
 <p>This tool allows users to view graphs for popular datasets, as well as find up to date information on the sources of information available through FRED.</p>
+<p>Sign up to
  <% unless current_user %>
     <h3>Sign Up</h3>
 
